--- a/psc/templates/psc/dco_incident_list.html
+++ b/psc/templates/psc/dco_incident_list.html
@@ -70,7 +70,7 @@
                         <th>H</th>
                         <th>J</th>
                         <th>K</th>
-                        {% if perms.psc.can_manage_data %}<th class="checklist" colspan="2"><button onclick="location.href='{% url psc.views.dco_incident_add  %}'">Add Incident</button></th>{% endif %}
+                        <th class="checklist" colspan="2">{% if perms.psc.add_dcoincident %}<button onclick="location.href='{% url psc.views.dco_incident_add  %}'">Add Incident</button>{% else %}&nbsp;{% endif %}</th>
                     </tr>
                 </thead>
 				{% for cl in checklists.object_list %}
@@ -131,9 +131,8 @@
                         <img src="/assets/img/status-busy.png" width="16" height="16" alt="complete" />
 						{% endif %}
                     </td>
-                    {% if perms.psc.can_manage_data %}<td class="checklist"><a href="{% url psc.views.dco_incident_update cl.id %}">Edit</a></td>{% endif %}
-										<td><a href="{% url psc.views.dco_incident_delete cl.id %}" onClick="return confirm('Are you sure you want to delete this incident')">Del</a>
-										</td>
+                    <td class="checklist">{% if perms.psc.change_dcoincident %}<a href="{% url psc.views.dco_incident_update cl.id %}">Edit</a>{% else %}&nbsp;{% endif %}</td>
+					<td>{% if perms.psc.delete_dcoincident %}<a href="{% url psc.views.dco_incident_delete cl.id %}" onClick="return confirm('Are you sure you want to delete this incident')">Del</a>{% else %}&nbsp;{% endif %}</td>
                 </tr>
 				{% empty %}
                 <tr>
