--- a/psc/templates/psc/eday_incident_list.html
+++ b/psc/templates/psc/eday_incident_list.html
@@ -77,7 +77,7 @@
 			<th>R</th>
 			<th>S</th>
 			<th>T</th>
-                        {% if perms.psc.can_manage_data %}<th class="checklist" colspan="2"><button onclick="location.href='{% url psc.views.eday_incident_add  %}'">Add Incident</button></th>{% endif %}
+                        <th class="checklist" colspan="2">{% if perms.psc.add_edayincident %}<button onclick="location.href='{% url psc.views.eday_incident_add  %}'">Add Incident</button>{% else %}&nbsp;{% endif %}</th>
                     </tr>
                 </thead>
 				{% for cl in checklists.object_list %}
@@ -174,9 +174,8 @@
 						{% endif %}
                     </td>
 
-                    {% if perms.psc.can_manage_data %}<td class="checklist"><a href="{% url psc.views.eday_incident_update cl.id %}">Edit</a></td>{% endif %}
-										<td><a href="{% url psc.views.eday_incident_delete cl.id %}" onClick="return confirm('Are you sure you want to delete this incident')">Del</a>
-										</td>
+                    <td class="checklist">{% if perms.psc.change_edayincident %}<a href="{% url psc.views.eday_incident_update cl.id %}">Edit</a>{% else %}&nbsp;{% endif %}</td>
+					<td>{% if perms.psc.delete_edayincident %}<a href="{% url psc.views.eday_incident_delete cl.id %}" onClick="return confirm('Are you sure you want to delete this incident')">Del</a>{% else %}&nbsp;{% endif %}</td>
                 </tr>
 				{% empty %}
                 <tr>
