added filters for samples on the dashboard and eday checklist
also added support for filtering by state on the dashboard

--- a/psc/templates/psc/eday_checklist_list.html
+++ b/psc/templates/psc/eday_checklist_list.html
@@ -75,7 +75,7 @@
 
 								{% endfor %}
                                 <td><input type="button" value="reset" id="reset">
-                                    <input type="submit" value="filter &rarr;"></td>
+                                    <input type="submit" value="filter"></td>
                             </tr>
                         </tbody>
                     </table>
