--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -85,6 +85,11 @@
                                 <a href="{% url eday_incident_view %}">Incidents</a>
                             </li>
 							{% endif %}
+							{% if perms.psc.can_analyse %}
+                            <li>
+                                <a href="{% url psc.views.eday_checklist_analysis %}">Checklist Analyses</a>
+                            </li>
+							{% endif %}
                         </ul>
                     </li>{% endif %}
 					{% if perms.psc.view_observer %}
