--- a/psc/templates/psc/eday_incident_list.html
+++ b/psc/templates/psc/eday_incident_list.html
@@ -84,9 +84,9 @@
                 <tr{% cycle ' class="odd"' '' %}>
                     <td>{{ cl.observer.observer_id }}</td>
                     <td>{{ cl.date|date:"D d-M" }}</td>
-                    <td>{{ cl.observer.location.name|default:"Unknown" }}</td>
-                    <td>{{ cl.observer.location.parent.name|default:"Unknown" }}</td>
-                    <td>{{ cl.observer.location.parent.parent.name|default:"Unknown" }}</td>
+                    <td>{{ cl.observer.lga|default:"Unknown" }}</td>
+                    <td>{{ cl.observer.district|default:"Unknown" }}</td>
+                    <td>{{ cl.observer.state|default:"Unknown" }}</td>
                     <td>{{ cl.observer.name }}</td>
                     <td>
 						{% if cl.A %}
