--- a/psc/templates/psc/eday_incident_update_form.html
+++ b/psc/templates/psc/eday_incident_update_form.html
@@ -10,10 +10,10 @@
 								<table>
 										<tr><td>Observer:</td><td>{{ incident.observer.name }} (<strong>{{ incident.observer.observer_id  }}</strong>)<input name='observer' type='hidden' value='{{ incident.observer.id }}'></td></tr>
 										<tr><td>Observer Phone No.:</td><td><strong>{{ incident.observer.phone }}</strong></td></tr>
-										<tr><td>Location:</td><td><strong>{{ location.parent.parent.parent.name }} - {{ location.parent.parent.name }} - {{ location.parent.name }} - {{ location.name }}</strong></td></tr>
+										<tr><td>Location:</td><td><strong>{{ incident.observer.zone.name }} - {{ incident.observer.state.name }} - {{ incident.observer.district.name }}</strong></td></tr>
 										<tr><td>Date:</td><td>{{ incident.date|date:"D d-M" }}</td><input type="hidden" name="{{ form.date.name }}" value="{{ form.initial.date|date:"Y-m-d" }}"></tr>
-										<tr><td>LGA:</td><td>{{ incident.location.parent.name }}</td></tr>
-										<tr><td>RC:</td><td>{{ incident.location.name }}</td></tr>
+										<tr><td>LGA:</td><td>{{ incident.observer.lga.name|default:"Unknown" }}</td></tr>
+										<tr><td>PS:</td><td>{{ incident.observer.ps.name|default:"Unknown" }}</td></tr>
 								</table>
 						</div>
 						<div class="clear"></div>
