--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -79,6 +79,7 @@
 								{{ filter_form.date }}
 								{{ filter_form.zone }}
 								{{ filter_form.state }}
+								{{ filter_form.lga }}
                 <input name="Go" value="GO" type="submit" style="height: 34px; font-size: 20px">
                 </form>
                 </div>
