bug fixed for saving control.

--- a/psc/templates/psc/eday_checklist_list.html
+++ b/psc/templates/psc/eday_checklist_list.html
@@ -8,6 +8,7 @@
         $("#reset").click(function () {
             $("#id_zone").val("");
             $("#id_state").val("");
+            $("#id_lga").val("");
             $("#id_day").val("");
             $("#id_observer_id").val("");
 	    $("#id_first").val("");
